Use-Case Diagramm in Pflichtenheft verlinkt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -263,7 +263,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \subsection{Architekturdiagramm}
   \subsection{Use-Case-Diagramme}
 \begin{center}
-%\includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf}
+\includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf}
 \end{center}
 \section{Benutzeroberfläche}
 %%TODO Benni auseinandersetzen
