Mindestversion der Betriebsysteme angepasst.

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -158,7 +158,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 
 \section{Produktumgebung}
 \subsection{Hardware} \textsf{Minimale Anforderungen:} Smartphone mit Bluetooth LE Unterstützung.
-\subsection{Software} \textsf{Betriebssystem:} Android > 8.0 und iOS > 12.0
+\subsection{Software} \textsf{Betriebssystem:} Android >= 7 und iOS >= 10
 
 \section{Funktionale Anforderungen}
 %%TODO Valle Koordination
