Review Produktumgebung, Glossareintrag BLE hinzugefügt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -73,7 +73,7 @@
 
 \newglossaryentry{Echtzeit}{name=Echtzeit, description={Bereitstellen/Anzeigen von Daten mit einer durch die Verarbeitung bedingten Verzögerung von bis zu ca. 2 Sekunden zwischen dem Anfallen der (Roh-)Daten und der Ausgabe bzw. Visualisierung.}}
 \newglossaryentry{Vorgang}{name=Vorgang, description={Als Vorgang wird in diesem Pflichtenheft bezeichnet, wenn ein Modus ausgewählt ist und Start gedrückt wurde. Der Vorgang endet mit dem Drücken von Stopp bzw. wird mit dem Wechseln des Modus.}} %%brauchen wir noch ne abbrechen Taste in der gui? haben wir so was schon?
-
+\newglossaryentry{BLE}{name=BLE, description={Bluetooth Low Energy ist eine Technologie, die Teil des Industriestandards Bluetooth ist und eine energiesparende, kabellose Kommunikation zwischen Geräten in einer Entfernung von bis zu ca. 10 Metern ermöglicht.}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % THE DOCUMENT BEGINS             	                              	 %
@@ -154,8 +154,8 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
     \end{itemize}
 
 \section{Produktumgebung}
-\subsection{Hardware} \textsf{Minimale Anforderungen:} Smartphone mit Bluetooth LE Unterstützung.
-\subsection{Software} \textsf{Betriebssystem:} Android >= 7 und iOS >= 10 %%review: vollständigkeit prüfen!!, Darstellung?
+\subsection{Hardware} \textsf{Minimale Anforderungen:} Smartphone mit \Gls{BLE} Unterstützung.
+\subsection{Software} \textsf{Betriebssystem:} Unterstützung nur von Android ab Version 7 und iOS ab Version 10.
 
 \section{Funktionale Anforderungen}
   \subsection{Mussanforderungen}
