Vorgehen für Qualitätszielbestimmungen festgelegt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -255,6 +255,8 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 %%TODO Benni auseinandersetzen
 \section{Qualitätszielbestimmungen}
  %%!! Wasn hiermit? Stand noch in der Mail als Unterpunkt. https://www.sosy-lab.org/Teaching/2015-WS-SEP/samples/pflichtenheft.pdf Seite 13 sieht man so eine Tabelle, wie ist das gemeint?
+ %%nächstes Treffen: ***kurzes*** Planungspoker mit Korrektheit, Zuverlässigkeit, Robustheit, Effizienz, Benutzerfreundlichkeit und Vertrauenswürdigkeit zwischen sehr wichtig, wichtig, weniger wichtig und unwichtig.
+ %% code-standards??
 \section{Globale Testfälle und Szenarien}
 %%TODO David
   \subsection{Globale Testfälle}
@@ -306,12 +308,8 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 
 
 \section{Entwicklungsumgebung}
-TODO valle
-
-Wir arbeiten an dem Projekt mit Visual Studio 2019, sodass alle eine einheitliche Entwicklungsumgebung verwenden.
-%%TODO vllt noch mal diskutieren:
-Dabei kommt der .NET Standard 2.0 zum Einsatz, der C\# 7.2 verwendet. Wir arbeiten außerdem mit Xamarin Forms.
-
+Wir arbeiten an dem Projekt mit Visual Studio 2019, sodass alle eine einheitliche Entwicklungsumgebung verwenden.\\
+Dabei kommt der .NET Standard 2.0 zum Einsatz, der C\# 7.2 verwendet. Wir arbeiten außerdem mit Xamarin Forms.\\
 Zur Versionskontrolle und zur Projektübersicht wird Git verwendet, das Repository liegt öffentlich auf Github\footnote{\url{https://github.com/vlle1/earablesKIT}}.
 \clearpage
 \printglossaries
