Absätze für Tests hinzugefügt, Deckblatt geändert
Außerdem F320 zu 285 gemacht.

--- a/Deckblatt.tex
+++ b/Deckblatt.tex
@@ -18,18 +18,19 @@
 \end{verbatim}
 
 
-  \begin{tabular}[t]{ll}
-	Projekt:       & \quad \projektName \\[1.2ex]
-	Auftraggeber:  & \quad \auftraggeber\\[1.2ex]
-	Auftragnehmer: & \quad \auftragnehmer\\[1.2ex]
+  \begin{tabular}[t]{p{4 cm}p{8 cm}}
+	Projekt:       & \projektName \\[1.2ex]
+	Auftraggeber:  & \auftraggeber\\[1.2ex]
+	Auftragnehmer: & \auftragnehmer\\[1.2ex]
   \end{tabular}
 
-\begin{tabular}{|p{3 cm}|p{3 cm}|p{5 cm}|}
+
+\begin{tabular}[t]{|p{4 cm}|p{8 cm}|}
 \hline
-\textbf{Version} & \textbf{Datum} & \textbf{Autor(en)} \\
+\textbf{Datum} & \textbf{Autor(en)} \\
 \hline
 \hline
-1.0 & \today & \authorName \\
+\today & \authorName \\
 \hline
 \end{tabular}
 \end{titlepage}
