--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -263,6 +263,26 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 \section{Benutzeroberfläche}
 %%TODO Benni auseinandersetzen
 \section{Qualitätszielbestimmungen}
+\begin{tabular}[t]{|c|c|c|c|c|c|}
+  \hline
+  \textbf{Kriterium} & \textbf{Sehr Wichtig} & \textbf{Wichtig} & \textbf{Weniger Wichtig} & \textbf{Unwichtig}\\
+  \hline
+  \hline
+  Korrektheit & x & & &\\
+  \hline
+  Zuverlässigkeit & x & & &\\
+  \hline
+  Robustheit & x & & &\\
+  \hline
+  Effizienz & x & & &\\
+  \hline
+  Benutzerfreundlichkeit & x & & &\\
+  \hline
+  Vertrauenswürdigkeit & x & & &\\
+  \hline
+
+\end{tabular}
+
  %%!! Wasn hiermit? Stand noch in der Mail als Unterpunkt. https://www.sosy-lab.org/Teaching/2015-WS-SEP/samples/pflichtenheft.pdf Seite 13 sieht man so eine Tabelle, wie ist das gemeint?
  %%nächstes Treffen: ***kurzes*** Planungspoker mit Korrektheit, Zuverlässigkeit, Robustheit, Effizienz, Benutzerfreundlichkeit und Vertrauenswürdigkeit zwischen sehr wichtig, wichtig, weniger wichtig und unwichtig.
  %% code-standards??
