Rechtschreibung, Glossary und Tests
Glossareinträge zu: TTS und Earables, Tests zu F200, F190 und F220.
.vscode zu .gitignore hinzugefügt.

--- a/Deckblatt.tex
+++ b/Deckblatt.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
 \maketitle
-\thispagestyle{empty} % no page number
+\thispagestyle{empty} % Keine Seitennummer
 
 \begin{verbatim}
 
