--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -1,22 +1,21 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage{amssymb} % needed for math
-\usepackage{amsmath} % needed for math
-\usepackage[utf8]{inputenc} % this is needed for german umlauts
-\usepackage[ngerman]{babel} % this is needed for german umlauts
-\usepackage[T1]{fontenc}    % this is needed for correct output of umlauts in pdf
-\usepackage[margin=2.5cm]{geometry} %layout
+\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage[utf8]{inputenc} % Umlaute
+\usepackage[ngerman]{babel} % Umlaute
+\usepackage[T1]{fontenc}    % Umlaute
+\usepackage[margin=2.5cm]{geometry}
 \usepackage{booktabs}
 \usepackage{lmodern}
 
-% this is needed for forms and links within the text
+% Notwendig für Links im Text
 \usepackage{hyperref}
 
 % glossar, see http://en.wikibooks.org/wiki/LaTeX/Glossary
-% has to be loaded AFTER hyperref so that entries are clickable
+% muss NACH hyperref geladen werden, sonst funktionieren die Links nicht
 \usepackage{glossaries}
 
-% The following is needed in order to make the code compatible
-% with both latex/dvips and pdflatex.
+% Kompatibilität
 \ifx\pdftexversion\undefined
 \usepackage[dvips]{graphicx}
 \else
@@ -81,6 +80,8 @@
 \newglossaryentry{Steuerungsparameter}{name=Steuerungsparameter, description={Steuerungsparameter sind Parameter, mit denen ein Programm eingestellt werden kann, um auf eine bestimmte Art und weiße zu arbeiten.}}
 \newglossaryentry{Schrittfrequenz}{name=Schrittfrequenz, description={Die Schrittfrequenz gibt an wie viele Schritte pro Zeiteinheit gemacht werden.}}
 \newglossaryentry{Rohdaten}{name=Rohdaten, description={Als Rohdaten werden unverarbeitete Daten bezeichnet.}}
+\newglossaryentry{TTS}{name=Text-To-Speech, description={Ein Text-to-Speech-System (TTS) (oder Vorleseautomat) wandelt Fließtext in eine akustische Sprachausgabe um.}}
+\newglossaryentry{Earables}{name=Earables, description={Eine Amalgamierung des Wortes Wearable und Earphone. Dabei handelt es sich um Kopfhörer, die mit Sensoren ausgestattet sind.}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -96,14 +97,14 @@
 
 \section{Einleitung}
 %% BLE glossareintrag konflikt
-Earables gehören zu den \Gls{Wearable Computings}. Sie sind also nichts anderes als intelligente Kopfhörer. Je nach dem wie sie ausgestattet werden bringen sie die unterschiedlichsten Funktionen mit sich. Neben der klassischen Austattung von  Lautsprechern, Mikrophon und Bluetooth Low Energy besitzen sie in unserem Fall zusätzlich ein \Gls{6-Achsen IMU}. Mit seiner Hilfe ist man in der Lage die (Kopf-)Bewegung des Nutzers zu tracken um mit den gewonnenen Messdaten  beispielsweise die Atemfrequenz zu ermitteln. Earebles bilden also eine Schnittstelle von Mensch und Computer. Mit ihnen kann man unauffällig medizinische Daten im Altag sammeln. Da sie kaum von normalen Bluetooth Kopfhörern zu unterscheiden sind haben sie bereits ein hohe soziale akzeptans in der Gesellschaft erlangt, im Gegensatz zu beispielsweise den smart Glasses. Mit der Entwicklung und Forschung dieser Art von Earables beschäftigt sich das globale eSense Projekt von Nokia Bell Labs in Zusammenarbeit mit dem Telecooperation Office (TECO). Hier wird gemeinsam nach möglichen Anwendungsfällen der Earables gesucht, wodurch auch dieses Projekt seinen Weg in diese Welt gefunden hat.
+\Gls{Earables} gehören zu den \Gls{Wearable Computings}. Sie sind also nichts anderes als intelligente Kopfhörer. Je nach dem wie sie ausgestattet werden bringen sie die unterschiedlichsten Funktionen mit sich. Neben der klassischen Ausstattung von  Lautsprechern, Mikrophon und Bluetooth Low Energy besitzen sie in unserem Fall zusätzlich ein \Gls{6-Achsen IMU}. Mit seiner Hilfe ist man in der Lage die (Kopf-)Bewegung des Nutzers zu verfolgen um mit den gewonnenen Messdaten  beispielsweise die Atemfrequenz zu ermitteln. \Gls{Earables} bilden also eine Schnittstelle von Mensch und Computer. Mit ihnen kann man unauffällig medizinische Daten im Alltag sammeln. Da sie kaum von normalen Bluetooth Kopfhörern zu unterscheiden sind haben sie bereits ein hohe soziale akzeptans in der Gesellschaft erlangt, im Gegensatz zu beispielsweise den smart Glasses. Mit der Entwicklung und Forschung dieser Art von \Gls{Earables} beschäftigt sich das globale eSense Projekt von Nokia Bell Labs in Zusammenarbeit mit dem Telecooperation Office (TECO). Hier wird gemeinsam nach möglichen Anwendungsfällen der \Gls{Earables} gesucht, wodurch auch dieses Projekt seinen Weg in diese Welt gefunden hat.
 \section{Zielbestimmung}
 Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 \begin{enumerate}
 
-  \item Es soll eine \Gls{Cross-Platform Bibliothek} (Android/IOS) für die Earables der Plattform eSense entwickelt werden mit der es möglich ist, die Messdaten des Gerätes aufzuzeichnen und verschiedene \Gls{Steuerungsparameter} zu verändern.
+  \item Es soll eine \Gls{Cross-Platform Bibliothek} (Android/IOS) für die \Gls{Earables} der Plattform eSense entwickelt werden mit der es möglich ist, die Messdaten des Gerätes aufzuzeichnen und verschiedene \Gls{Steuerungsparameter} zu verändern.
   
-  \item Es soll ein Erweiteungsmodul entwickelt werden, mit dem die übermittelten  \Gls{Rohdaten} automatisch verarbeitet und ausgewertet werden, um so festzustellen ob der Nutzer gerade läuft oder steht.
+  \item Es soll ein Erweiterungsmodul entwickelt werden, mit dem die übermittelten  \Gls{Rohdaten} automatisch verarbeitet und ausgewertet werden, um so festzustellen ob der Nutzer gerade läuft oder steht.
   
   \item Es soll eine App mit einer \Gls{GUI} entwickelt werden, die anzeigt ob der Nutzer gerade läuft oder steht.
 
@@ -112,11 +113,11 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 \subsection{Musskriterien}
 
   \begin{itemize}
-    \item\text Die Cross-Platform Bibliothek soll in der Lage sein die gesammelten Daten der Earables aufzuzeichnen
+    \item\text Die Cross-Platform Bibliothek soll in der Lage sein die gesammelten Daten der \Gls{Earables} aufzuzeichnen
     \item\text Die Cross-Platform Bibliothek soll in der Lage sein die verschiedenen Steuerungsparameter zu setzen z.B. die Abtastrate Rate
     \item\text Das Erweiterungsmodul kann erkennen ob der Nutzer gerade \glqq läuft\grqq{}oder \glqq steht\grqq
     \item\text Die App soll anzeigen können ob der Nutzer gerade läuft oder steht
-    \item\text Die GUI der App muss so benutzerfreundlich gestaltet werden, dass der Benutzer intuitiv weiß wie man die Steuerungsparameter der Earables verändert
+    \item\text Die GUI der App muss so benutzerfreundlich gestaltet werden, dass der Benutzer intuitiv weiß wie man die Steuerungsparameter der \Gls{Earables} verändert
   \end{itemize}
 \subsection{Wunschkriterien}
   \begin{itemize}
@@ -135,9 +136,9 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \subsection{Abgrenzungskriterien}
   \begin{itemize}
     \item\text Es werden keine Rohdaten gespeichert
-    \item\text Es werden nur Daten auf dem Smartphone gespeichert und nicht auf den Earables
+    \item\text Es werden nur Daten auf dem Smartphone gespeichert und nicht auf den \Gls{Earables}
     \item\text Die Musik passt sich nicht der Schrittfrequenz des Nutzers an
-    \item\text Im Modus \glqq Zählen\grqq{}wird davon ausgegangen, dass der Nutzer wirklich nur Liegestützen oder Sit Ups macht und nicht versucht das System auszutricksen indem er beispielsweise die Earables, mit der Hand, hoch und runter bewegt
+    \item\text Im Modus \glqq Zählen\grqq{}wird davon ausgegangen, dass der Nutzer wirklich nur Liegestützen oder Sit Ups macht und nicht versucht das System auszutricksen indem er beispielsweise die \Gls{Earables}, mit der Hand, hoch und runter bewegt
   \end{itemize}
 
 \section{Produkteinsatz}
@@ -150,10 +151,10 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \subsection{Anwendungsbereiche}
     \begin{itemize}
       \item\textsf{Bibliothek} Softwareentwicklung für eSense Wearables
-      \item\textsf{Erweiterungsmodul} Softwareentwicklung im Bereich Schritterkennung %%Vorschlag: Nutzung von Sensordaten als Nutzereingabe in einer App, z.b. im Fittness, aber auch für andere interaktive Apps ? (valle)
+      \item\textsf{Erweiterungsmodul} Softwareentwicklung im Bereich Schritterkennung %%Vorschlag: Nutzung von Sensordaten als Nutzereingabe in einer App, z.b. im Fitness, aber auch für andere interaktive Apps ? (valle)
       \item\textsf{App} Heimtraining, Sport,\dots
     \end{itemize}
-  \subsection{Betriebsbedinugen} %%macht nur für app sinn oder?
+  \subsection{Betriebsbedingungen} %%macht nur für app sinn oder?
   %%TODO
   %mögliche Punkte: physikalische Umgebung (Training alleine, Umgebung egal), Betriebsdauer ("Akkuabhängig", keine weitere Grenzen), Qualifikation des Benutzers (keine besondere? sollte Sportübungen selbstständig ausführen), Handy und Kopfhörer sollten nicht über 10 Meter entfernt werden, sodass Bluetooth-Verbindung möglich ist
     \begin{itemize}
@@ -186,7 +187,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       \begin{itemize}
       \item[/F070/] \textsf{App starten:} Der Nutzer kann die App über sein Smartphone starten. Die App startet im Laufmodus.%%!! hatten wir uns glaube ich drauf geeinigt (?) - valle
       \item[/F080/] \textsf{Modus auswählen:} Auswahl eines Modus aus allen verfügbaren Modi (also mindestens der Modus \glqq Laufen/Stehen anzeigen\grqq). 
-      \item[/F090/] \textsf{Modus wechseln:} Wechseln zwischen Modi über ein einblendbares Menü, während ein Modus ausgewählt ist. %%aktueller Modus stoppt, nichtfunktionale Anforderung? - nicht der Modus, sondern der Vorgang stoppt, ausgewählt statt aktiv (valle)
+      \item[/F090/] \textsf{Modus wechseln:} Wechseln zwischen Modi über ein einblendebares Menü, während ein Modus ausgewählt ist. %%aktueller Modus stoppt, nichtfunktionale Anforderung? - nicht der Modus, sondern der Vorgang stoppt, ausgewählt statt aktiv (valle)
       \item[/F100/] \textsf{Laufmodus:} Liveanzeige, ob Nutzer gerade \glqq läuft\grqq{} oder \glqq steht\grqq{}.
       \item[/F110/] \textsf{Vorgang starten:} Der Nutzer kann den modusspezifischen Vorgang starten. Dann wird der Modus nach seiner Beschreibung aktiv ausgeführt. Dies gilt für jeden Modus außer den Modus \glqq Livedaten\grqq.
       \item[/F120/] \textsf{Vorgang stoppen:} Der Nutzer kann den modusspezifischen Vorgang stoppen.
@@ -220,7 +221,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       \item[/F290/] \textsf {Erstnutzung:} Aufforderung der Angabe von Name, Schrittlänge und in-App Sprache bei Erstnutzung.
       \item[/F300/] \textsf{Exportieren und Importieren von Trainingsdaten:} Der Nutzer kann in der App seine gesamten Trainingsdaten exportieren und importieren.
       %% Treffen: sollen wir die Funktionen noch mal umstrukturieren, diese beiden sollten weiter nach oben, aber dann passen die Testfälle nicht mehr 
-      \item[/F310/] \textsf{Speichern der Vorgänge: \textit{Zusatz zu F120}} Speicherung aller Vorgänge die aktiv waren mit Datum, Uhrzeit und dem Wert, der der Funktion entspricht (keine Rohdaten).   %%Gehört das nicht unter Produkdaten?????? nein, ist ein Zusatz zu F120. aber es sollte weiter oben kommen.. 
+      \item[/F310/] \textsf{Speichern der Vorgänge: \textit{Zusatz zu F120}} Speicherung aller Vorgänge die aktiv waren mit Datum, Uhrzeit und dem Wert, der der Funktion entspricht (keine Rohdaten).   %%Gehört das nicht unter Produktdaten?????? nein, ist ein Zusatz zu F120. aber es sollte weiter oben kommen.. 
       \end{itemize}
 
 
@@ -283,7 +284,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 
 \end{tabular}
 
- %%!! Wasn hiermit? Stand noch in der Mail als Unterpunkt. https://www.sosy-lab.org/Teaching/2015-WS-SEP/samples/pflichtenheft.pdf Seite 13 sieht man so eine Tabelle, wie ist das gemeint?
+ %%!! Was ist hiermit? Stand noch in der Mail als Unterpunkt. https://www.sosy-lab.org/Teaching/2015-WS-SEP/samples/pflichtenheft.pdf Seite 13 sieht man so eine Tabelle, wie ist das gemeint?
  %%nächstes Treffen: ***kurzes*** Planungspoker mit Korrektheit, Zuverlässigkeit, Robustheit, Effizienz, Benutzerfreundlichkeit und Vertrauenswürdigkeit zwischen sehr wichtig, wichtig, weniger wichtig und unwichtig.
  %% code-standards??
 \section{Globale Testfälle und Szenarien}
@@ -294,7 +295,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \begin{enumerate}
     \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
     \item Die App wird gestartet.
-    \item Nach dem Startvorgang der App wird in den Modus \glqq Laufmodus\grqq{}(/F100/) gewechselt.
+    \item Nach dem Startvorgang der App wird in den Modus \glqq Laufmodus\grqq{} gewechselt.
     \item Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
     \item Die App zeigt dem Nutzer den Status \glqq stehend\grqq{} an.
     \item Sobald der Nutzer anfängt zu gehen zeigt die App \glqq gehend\grqq{} an.
@@ -308,7 +309,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
     \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
     \item[] Der Nutzer spielt Musik mit der vorinstallierten Musik-App ab.
     \item[] Die App wird gestartet.
-    \item[] Nach dem Startvorgang der App wird in den Modus \glqq Start/Stop Musikmodus\grqq{} (/F210/) gewechselt.
+    \item[] Nach dem Startvorgang der App wird in den Modus \glqq Start/Stop Musikmodus\grqq{} gewechselt.
     \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
     \item[] Der Nutzer beginnt zu gehen.
     \item[] Der Nutzer startet den gewählten Modus.
@@ -319,16 +320,46 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \end{itemize}
   
   \paragraph{Zählmodus (/F200/)}
+  \begin{itemize}
+    \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+    \item[] Die App wird gestartet.
+    \item[] Nach dem Startvorgang der App wird in den Modus \glqq Zählmodus\grqq{} gewechselt.
+    \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+    \item[] Der Nutzer wählt eine verfügbare Übung aus. 
+    \item[] Der Nutzer startet den gewählten Modus.
+    \item[] Der Nutzer führt die Übung X (natürliche Zahl) mal aus.
+    \item[] Der Nutzer stoppt den laufenden Modus.
+    \item[] Die App zeigt X an.
+  \end{itemize}
 
   \paragraph{Livedaten (/F190/)}
-  
+  \begin{itemize}
+    \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+    \item[] Die App wird gestartet.
+    \item[] Nach dem Startvorgang der App wird in den Modus \glqq Livedaten\grqq{} gewechselt.
+    \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+    \item[] Der Nutzer startet den gewählten Modus.
+    \item[] Die App zeigt die korrekten Sensordaten 
+  \end{itemize}
+
   \paragraph{Lauschen\&Agieren (/F220/)}
+  \begin{itemize}
+    \item[] Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
+    \item[] Die App wird gestartet.
+    \item[] Nach dem Startvorgang der App wird in den Modus \glqq Lauschen\&Agieren\grqq{} gewechselt.
+    \item[] Die Kopfhörer werden korrekt am Ohr des Nutzers angebracht.
+    \item[] Der Nutzer stellt sich ein Training aus den verfügbaren Übungen zusammen (/F220/).
+    \item[] Der Nutzer startet den gewählten Modus.
+    \item[] Dem Nutzer wird per \Gls{TTS} die aktuelle Übung angesagt (/F230/).
+    \item[] Der Nutzer führt die Übung aus.
+    \item[] Die letzten beiden Schritte werden so lange wiederholt, bis alle ausgewählten Übungen erledigt sind.
+    \item[] Der Modus wird automatisch beendet.
+    \item[] Die App zeigt die benötigten Zeiten pro Übung an (/F240/).
+  \end{itemize}
 
   \paragraph{Einstellungen (/F250/ bis /F285/)}
 
   \paragraph{Erstnutzung (/F290/)}
-
-  \paragraph{Importieren/Exportieren (/F300/)}
 
   \paragraph{Importieren/Exportieren (/F300/)}
 
